[package]
name = "sudoku-tui"
version = "0.1.0"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
description = "Play sudoku on the command line. (TUI interface)"
license = "MIT"
repository = "https://github.com/TianyiShi2001/sudoku-tui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku = "0.7"
cursive = {version = "0.15", default-features = false }
rand = "0.7"

[features]
default = ["cursive/crossterm-backend"]

[[bin]]
name = "sudoku"
path = "src/main.rs"